fix: header's links overflow-y

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -143,7 +143,7 @@ $header__trans: 200ms;
   gap: 24px;
 
   list-style: none;
-  overflow-x: auto;
+  overflow-y: auto;
 
   padding: 0;
   margin: 0;
